# number_triangle

./: Cargo.toml  README.txt  number_triangle
src/: lib.rs  main.rs
