[package]
name = "number_triangle"
version = "0.1.0"
edition = "2021"
description = "A data structure and algorithm used to solve an algorithm problem."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
